Put markdown inside one single file
Avoid repeating the whole html markup for each slides.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 					</p>
 				</section>
 
+        <section data-markdown="./slides.md" data-vertical="^\n\n">
+        </section>
+
 				<section data-markdown>
 					<script type="text/template">
 						## What we will cover
